--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,9 @@
+2013-08-13 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 4.6.4
+	  Fixes compilation against texinfo 5.0+
+	* glibc216.patch: Removed, fix included in 4.6.4
+	* PRE_BUILD: No longer apply glibc216.patch
+
 2013-02-10 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: apply go patch only if Go compiler was included into build
 	* EXPORTS: chmod +x
