--- a/science/stellarium/HISTORY
+++ b/science/stellarium/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.12.2
+
 2013-04-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix SOURCE_URL[0]
 
