--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* python-pypi/pillow: new spell, a fork of pil that is maintained
 	  actively
+	* python-pypi/pil: spell deprecated [unmaintained]
 
 2013-08-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* python-pypi/clint: new spell, Python Command-line Application Tools
