--- a/graphics/mcomix/HISTORY
+++ b/graphics/mcomix/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2012-07-15 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 0.99
 
