--- a/graphics/comix/HISTORY
+++ b/graphics/comix/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2009-04-03 George Sherwood <gsherwood@sourcemage.org>
 	* DETAILS: Updated to version 4.0.4
 
