--- a/graphics/keyjnote/HISTORY
+++ b/graphics/keyjnote/HISTORY
@@ -1,5 +1,9 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2011-01-02 Ismael Luceno <ismael@sourcemage.org>
 	* keyjnote.desktop: added spanish comment
 
 2007-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* DETAILS, DEPENDS, BUILD, INSTALL, HISTORYdesktop/keyjnote.desktop, : created spell
+	* DETAILS, DEPENDS, BUILD, INSTALL, HISTORY, desktop/keyjnote.desktop:
+	  created spell
