--- a/audio-players/exaile/HISTORY
+++ b/audio-players/exaile/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2011-02-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.3.2.1, new SOURCE_URL[0]
 	* BUILD: sedit removed, no more mmkeys/Makefile
