--- a/http/webcleaner/HISTORY
+++ b/http/webcleaner/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2009-05-02 Andraž "ruskie" Levstik <ruskie+f03a580f@codemages.net>
 	* init.d/webcleaner: made it non-sh, bug #13702
 
