--- a/python-pypi/pyicqt/HISTORY
+++ b/python-pypi/pyicqt/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2009-01-03 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: a new optional
 
