--- a/python-pypi/hatta/HISTORY
+++ b/python-pypi/hatta/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2012-11-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.5.3
 
