--- a/python-pypi/pymsnt/HISTORY
+++ b/python-pypi/pymsnt/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2011-07-25 Bor Kraljič <pyrobor@ver.si>
 	* DOWNLOAD: source $GRIMOIRE/hg_download.function before using hg_download
 
