--- a/python-pypi/soya/HISTORY
+++ b/python-pypi/soya/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2009-04-21 Ethan Grammatikidis <eekee57@fastmail.fm>
 	* DEPENDS: openal -> OPENAL
 
