--- a/python-pypi/grecipe-manager/HISTORY
+++ b/python-pypi/grecipe-manager/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2011-07-10 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 0.15.9
 
