--- a/python-pypi/itools/HISTORY
+++ b/python-pypi/itools/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2008-12-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.50.0
 
