--- a/python-pypi/reportlab/HISTORY
+++ b/python-pypi/reportlab/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2013-04-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.7
 
