--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,7 @@
+2013-08-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.36
+	  now supports poppler-0.24.0
+
 2013-07-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.35
 
