--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,6 @@
+2013-08-15 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.5.5, SOURCE and SOURCE_URL[0] updated
+
 2013-05-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5.2
 
