--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-15 Eric Sandall <sandalle@sourcemage.org>
+	* python-pypi/ipaddr: Added Google's IP address manipulation
+	  library.
+
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* libs/libvirt-glib: Added a glib wrapper for libvirt.
 	* utils/spice-gtk: Added a GTK client and libraries for SPICE.
