--- a/gnome3-libs/vte3/HISTORY
+++ b/gnome3-libs/vte3/HISTORY
@@ -1,3 +1,6 @@
+2013-08-15 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on intltool
+
 2012-12-27 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 0.34.2
 
