--- a/gnome2-libs/vte/HISTORY
+++ b/gnome2-libs/vte/HISTORY
@@ -1,3 +1,6 @@
+2013-08-15 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on intltool
+
 2012-12-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: removed dependencies on expat, libffi, libxau, libxcb, libxdmcp,
 	  libxrender and pcre
