--- a/gnome3-libs/vte3/HISTORY
+++ b/gnome3-libs/vte3/HISTORY
@@ -1,4 +1,5 @@
 2013-08-15 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.34.7
 	* DEPENDS: Depends on intltool
 
 2012-12-27 Pol Vinogradov <vin.public@gmail.com>
