--- a/gnome3-libs/vte3/HISTORY
+++ b/gnome3-libs/vte3/HISTORY
@@ -1,8 +1,10 @@
 2013-08-15 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.34.7
 	* DEPENDS: Depends on intltool
+	  Optionally depends on gobject-introspection
 	* *SUB_DEPENDS: Allow requesting deprecated
 	  GLib/Pango/ATK/GDK/GTK+ features
+	  Allow requesting gobject-introspection dependency
 
 2012-12-27 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 0.34.2
