--- a/crypto/gpgme/HISTORY
+++ b/crypto/gpgme/HISTORY
@@ -1,3 +1,6 @@
+2013-08-16 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.4.3
+
 2013-05-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, PREPARE: 1.4 branch added, 1.4.1
 
