--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2013-08-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.8
+
 2013-07-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.6
 	  new website
