--- a/graphics/gphoto2/HISTORY
+++ b/graphics/gphoto2/HISTORY
@@ -1,3 +1,6 @@
+2013-08-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.5.2
+
 2012-08-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.5.0
 
