--- a/crypto/ca-certificates/HISTORY
+++ b/crypto/ca-certificates/HISTORY
@@ -1,3 +1,6 @@
+2013-08-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20130610
+
 2013-01-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 20130119
 
