--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* graphics/pktriggercord: new spell, remote control software
+	  for Pentax DSLRs
+
 2013-08-16 Eric Sandall <sandalle@sourcemage.org>
 	* accounts/groups: Add polkitd for policykit
 
