--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,7 @@
+2013-08-18 Treeve Jelbert <treeve@sourcemage.org>
+	* init.d/devpts: added extra script to create amd mount /dev/pts if needed
+	* DETAILS: PATCHLEVEL=1
+
 2013-08-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version v1.2
 
