--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,7 @@
+2013-08-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.36.4
+	* PRE_BUILD: ./autogen.sh to work with automake 1.14
+
 2013-07-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.36.3
 
