--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2013-08-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.18.3.1
+
 2013-07-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional libunistring
 	* BUILD: remove make_single
