--- a/windowmanagers/blackbox/HISTORY
+++ b/windowmanagers/blackbox/HISTORY
@@ -1,3 +1,7 @@
+2013-08-19 Remko van der Vossen <wich@sourcemagr.org>
+	* DEPENDS: replace xorg-libs with individual libraries
+	* DETAILS: use new style source forge url
+
 2012-01-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: removed { which prevented the spell from being built
 
