--- a/x11/vnc/HISTORY
+++ b/x11/vnc/HISTORY
@@ -1,3 +1,6 @@
+2013-08-19 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: replace xorg-libs by individual libs
+
 2009-08-05 George Sherwood <gsherwood@sourcemage.org>
 	* PRE_BUILD: Added patch. Bug #15330
 	* stdlib-include-fixes.patch: Added patch from Bug #15330
