--- a/x11-toolkits/xaw3d/HISTORY
+++ b/x11-toolkits/xaw3d/HISTORY
@@ -1,3 +1,6 @@
+2013-08-19 Remko van der Vossen <wich@sourcemage.org>
+	* DEPENDS: replace xorg-libs by individual libs
+
 2009-02-22 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: no more libxp
 	* DETAILS: patchlevel++
