--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,6 @@
+2013-08-20 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: Fails to build with -Wl,--as-needed in LDFLAGS
+
 2013-08-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.40
 
