--- a/utils/gnuplot/HISTORY
+++ b/utils/gnuplot/HISTORY
@@ -1,3 +1,6 @@
+2013-08-22 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: fix for CVS branch
+
 2013-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.6.1, fix SOURCE_URL[0]
 	* PRE_BUILD, automake-1.12.patch: removed patch
