--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2013-08-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.82
+
 2013-07-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.81
 
