--- a/python-pypi/hatta/HISTORY
+++ b/python-pypi/hatta/HISTORY
@@ -1,3 +1,8 @@
+2013-08-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6.2
+	* PRE_BUILD: added, to apply a patch
+	* locale.patch: added my backported patch from OpenBSD
+
 2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: pil -> pillow
 
