--- a/utils/cronie/HISTORY
+++ b/utils/cronie/HISTORY
@@ -1,3 +1,7 @@
+2013-08-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.11
+	* CONFIGURE: corrected syscrontab flags; dropped deprecated flags
+
 2012-11-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.9
 	* CONFIGURE: added option for syscrontab support
