--- a/audio-libs/libmad/HISTORY
+++ b/audio-libs/libmad/HISTORY
@@ -1,3 +1,6 @@
+2013-08-22 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Use --add-missing with automake
+
 2013-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD: fix obsolete macro in configure.ac
 
