--- a/utils/taskwarrior/HISTORY
+++ b/utils/taskwarrior/HISTORY
@@ -1,3 +1,6 @@
+2013-08-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.0
+
 2012-09-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.1.2
 
