--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2013-08-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.4
+
 2013-07-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.8.3.4
 
