--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,6 @@
+2013-08-24 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS, DEPENDS: version 17.0.8
+
 2013-07-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: Build fails without OpenGL headers
 
