--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2013-08-24 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS. DEPENDS: version 23.0.1
+
 2013-07-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: Build fails without OpenGL headers
 
