--- a/chat-im/licq/HISTORY
+++ b/chat-im/licq/HISTORY
@@ -1,3 +1,6 @@
+2013-08-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.8.0
+
 2013-02-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.7.1
 
