--- a/fonts-x11/dejavu-ttf/HISTORY
+++ b/fonts-x11/dejavu-ttf/HISTORY
@@ -1,3 +1,6 @@
+2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.34
+
 2013-06-24 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: Proper download link
 
