--- a/crypto/loop-aes/HISTORY
+++ b/crypto/loop-aes/HISTORY
@@ -1,3 +1,6 @@
+2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.7a
+
 2013-07-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.6i
 
