--- a/http/seamonkey/HISTORY
+++ b/http/seamonkey/HISTORY
@@ -1,3 +1,7 @@
+2013-08-26 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.20, SECURITY_PATCH=55
+	* DEPENDS: required versions for nss updated
+
 2013-07-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.19, SECURITY_PATCH=54
 
