--- a/http/newsbeuter/HISTORY
+++ b/http/newsbeuter/HISTORY
@@ -1,3 +1,7 @@
+2013-08-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.7
+	* DEPENDS: add dep on json-c
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
