--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2013-08-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1
+
 2013-08-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.8
 
