--- a/security/fwknop/HISTORY
+++ b/security/fwknop/HISTORY
@@ -1,3 +1,6 @@
+2013-08-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.5.1; do not include doc build directory
+
 2012-12-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.4
 	* BUILD: added, to fix multijob build
