--- a/disk/udisks2/HISTORY
+++ b/disk/udisks2/HISTORY
@@ -1,3 +1,6 @@
+2013-08-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.1.1
+
 2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
