--- a/net/ntop/HISTORY
+++ b/net/ntop/HISTORY
@@ -1,3 +1,11 @@
+2013-08-28 David C. Haley <khoralin@gmail.com>
+	* DETAILS: version bump 3.3.9 -> 5.0.1
+	* PRE_BUILD: removed geoip "stuff"
+	* BUILD: removed, default build used
+	* DEPENDS: gd & rrdtool not required
+	* ntop-3.3.9.tar.gz.sig: removed
+	* systemgeoip.patch: removed, doesn't seem needed
+
 2010-10-30 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: added SOURCE_IGNORE for SOURCE2 and SOURCE3
 	* GeoLiteCity.dat.gz.sig, GeoIPASNum.dat.gz.sig: removed, no longer needed
