--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* haskell/haskell-attoparsec: new spell, a fast parser combinator library
+
 2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/opendkim: new spell, open source DKIM library, MTA filter
 	  implementation and associated tools
