--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* haskell/haskell-attoparsec: new spell, a fast parser combinator library
 	* haskell/blaze-builder: new spell, an abstraction of buffered output of
 	  byte streams
+	* haskell/haskell-hashable: new spell, a class for values that can be
+	  converted to a hash value
 
 2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/opendkim: new spell, open source DKIM library, MTA filter
