--- a/haskell/haskell-text/HISTORY
+++ b/haskell/haskell-text/HISTORY
@@ -1,3 +1,6 @@
+2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.11.3.1
+
 2012-09-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.11.2.3
 
