--- a/graphics/ufraw/HISTORY
+++ b/graphics/ufraw/HISTORY
@@ -1,3 +1,6 @@
+2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.19.2
+
 2011-08-12 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.18
 	* DEPENDS: cleaned up unknown flags for exiv2 and lensfun
