--- a/perl-cpan/image-exiftool/HISTORY
+++ b/perl-cpan/image-exiftool/HISTORY
@@ -1,3 +1,6 @@
+2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 9.27
+
 2012-10-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 9.03
 
