--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-08-29 David C. Haley <khoralin@gmail.com>
+	* net/amap: new spell, an application protocol tool
+
 2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-attoparsec: new spell, a fast parser combinator library
 	* haskell/blaze-builder: new spell, an abstraction of buffered output of
