--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-30 Ismael Luceno <ismael@sourcemage.org>
+	* devel/comparator: new spell, Rapidly find common code segments in
+	  large source trees
+
 2013-08-29 David C. Haley <khoralin@gmail.com>
 	* net/amap: new spell, an application protocol tool
 
