--- a/graphics/fbida/HISTORY
+++ b/graphics/fbida/HISTORY
@@ -1,3 +1,6 @@
+2013-09-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.09
+
 2008-08-28 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 2.07, changed download location to releases
 	  directory
