--- a/gnome2-libs/dconf/HISTORY
+++ b/gnome2-libs/dconf/HISTORY
@@ -1,3 +1,7 @@
+2013-09-02 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.16.1
+	  changed SOURCE_URL
+
 2013-06-11 Eric Sandall <sandalle@sourcemage.org>
 	* Bug #450 (apply Javier's fix)
 
