--- a/printer/ghostscript/HISTORY
+++ b/printer/ghostscript/HISTORY
@@ -1,3 +1,6 @@
+2013-09-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 9.10
+
 2013-04-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: remove jasper
 
