--- a/qt5/qtgraphicaleffects/HISTORY
+++ b/qt5/qtgraphicaleffects/HISTORY
@@ -1,3 +1,6 @@
+2013-09-03  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.1.1
+
 2013-07-09  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.0
 
