--- a/qt5/qtquick1/HISTORY
+++ b/qt5/qtquick1/HISTORY
@@ -1,4 +1,7 @@
-2013-07-094-13  Treeve Jelbert <treeve@sourcemage.org>
+2013-09-03  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.1.1
+
+2013-07-09  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.0
 
 2013-04-13  Treeve Jelbert <treeve@sourcemage.org>
