--- a/wm-addons/xmonad-contrib/HISTORY
+++ b/wm-addons/xmonad-contrib/HISTORY
@@ -1,3 +1,6 @@
+2013-09-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.11.2
+
 2012-01-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.11
 	* DEPENDS: added dependency on haskell-extensible-exceptions
