--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,6 @@
+2013-10-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: legacy version 0.7.16
+
 2013-10-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.4 (stable)
 	* BUILD, DEPENDS: moved license handling to BUILD
