--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-10-13 Jeremy Blosser <jblosser@sourcemage.org>
+	* chat-libs/libstrophe: new spell, XMPP library in C
+
 2013-10-13 Ladislav Hagara <hgr@vabo.cz>
 	* python-pypi/pexpect: new spell, pure Python expect-like module
 
