--- a/libs/upower/HISTORY
+++ b/libs/upower/HISTORY
@@ -1,3 +1,6 @@
+2013-10-13  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.22
+
 2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.21
 	* DEPENDS: add LIBUSB
