--- a/archive/burp/HISTORY
+++ b/archive/burp/HISTORY
@@ -1,3 +1,6 @@
+2013-10-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.38 (devel)
+
 2013-08-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.36 (devel)
 
