--- a/libs/boost/HISTORY
+++ b/libs/boost/HISTORY
@@ -1,3 +1,8 @@
+2013-10-13 Treeeve Jelbert <treeve@sourcemage.org>
+	* PRE_BUILD: apply atomic patch
+	* atomic.diff: added, upstream patch
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: add atomic
+
 2013-09-12 Treeeve Jelbert <treeve@sourcemage.org>
 	* CONFIGURE, PRE_SUB_DEPENDS, SUB_DEPENDS: add coroutine and log
 
