--- a/xorg-driver/xf86-input-evdev/HISTORY
+++ b/xorg-driver/xf86-input-evdev/HISTORY
@@ -1,3 +1,6 @@
+2013-10-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.8.2
+
 2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional UDEV
 
