--- a/libs/sword/HISTORY
+++ b/libs/sword/HISTORY
@@ -1,3 +1,6 @@
+2013-10-13 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS: 1.7.0
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
