--- a/utils/bibletime4/HISTORY
+++ b/utils/bibletime4/HISTORY
@@ -1,3 +1,6 @@
+2013-10-13 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS, PREPARE: release version to 2.9.2, add git version
+
 2010-01-20 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 2.5
 
