--- a/x11-libs/fontconfig/HISTORY
+++ b/x11-libs/fontconfig/HISTORY
@@ -1,3 +1,6 @@
+2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.11.0
+
 2013-01-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.10.2
 
