--- a/gnome2-libs/gdk-pixbuf2/HISTORY
+++ b/gnome2-libs/gdk-pixbuf2/HISTORY
@@ -1,3 +1,6 @@
+2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	*  DETAILS: version 2.30.0
+
 2013-05-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.28.1
 
