--- a/disk/udisks2/HISTORY
+++ b/disk/udisks2/HISTORY
@@ -1,3 +1,7 @@
+2013-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add optional gettext
+	  fix unknown --enable-man-pages
+
 2013-08-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.1.1
 
