--- a/chat-im/prosody/HISTORY
+++ b/chat-im/prosody/HISTORY
@@ -1,3 +1,7 @@
+2013-10-14 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS: version 0.9.1
+	* DEPENDS: added lualdap support
+
 2011-06-21 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 0.8.2
 
