--- a/disk/dosfstools/HISTORY
+++ b/disk/dosfstools/HISTORY
@@ -1,5 +1,8 @@
+2013-10-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.0.23
+
 2013-06-13 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 3.0.30
+	* DETAILS: version 3.0.20
 
 2013-06-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.18
