--- a/net/fping/HISTORY
+++ b/net/fping/HISTORY
@@ -1,3 +1,6 @@
+2013-10-15 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.6
+
 2013-05-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.5
 
