--- a/libs/gmp/HISTORY
+++ b/libs/gmp/HISTORY
@@ -1,3 +1,6 @@
+2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.1.3 (devel)
+
 2013-05-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.2 (devel)
 	  this tarball is now .xz
