--- a/net/iw/HISTORY
+++ b/net/iw/HISTORY
@@ -1,3 +1,6 @@
+2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.11
+
 2013-05-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.10
 
