--- a/crypto/polarssl/HISTORY
+++ b/crypto/polarssl/HISTORY
@@ -1,3 +1,6 @@
+2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.1
+
 2013-06-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.8
 	  SECURITY_PATCH++, fixes:
