--- a/crypto/ca-certificates/HISTORY
+++ b/crypto/ca-certificates/HISTORY
@@ -1,3 +1,7 @@
+2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20130906
+	* PRE_BUILD: intrenal tarballl is now .xz
+
 2013-08-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 20130610
 
