--- a/ftp/curl/HISTORY
+++ b/ftp/curl/HISTORY
@@ -1,3 +1,6 @@
+2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 7.33.0
+
 2013-08-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 7.32.0
 
