--- a/python-pypi/cython/HISTORY
+++ b/python-pypi/cython/HISTORY
@@ -1,3 +1,6 @@
+2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.19.2
+
 2013-06-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.19.1
 
