--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,6 @@
+2013-10-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.8.2
+
 2013-05-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.8.1
 
