--- a/wm-addons/cairo-dock-plugins/HISTORY
+++ b/wm-addons/cairo-dock-plugins/HISTORY
@@ -1,3 +1,6 @@
+2013-10-16 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 3.3.0
+
 2013-03-25 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 3.2.0
 
