--- a/libs/json-c/HISTORY
+++ b/libs/json-c/HISTORY
@@ -1,2 +1,6 @@
+2013-10-17 Treeve Jelbert <treeve@souremage.org>
+	* DETAILS: version 0.11
+	  new SOURCE_URL & WEB_SITE
+
 2011-11-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: spell created, version 0.9
