--- a/libs/orc/HISTORY
+++ b/libs/orc/HISTORY
@@ -1,3 +1,6 @@
+2013-10-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DTEAAILS: version 0.4.18
+
 2013-04-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DTEAAILS: version 0.4.17
 
