--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2013-10-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.15.2
+
 2013-08-26 Ladislav Hagara <hgr@vabo.cz>
 	* BUILD, INSTALL: fixed for DEFAULT branch
 
