--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2013-10-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.1.0
+
 2013-08-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.0.5
 
