--- a/utils/buntstift/HISTORY
+++ b/utils/buntstift/HISTORY
@@ -1,3 +1,6 @@
+2013-10-20 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS, DEPENDS: update to 0.61
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
