--- a/libs/serd/HISTORY
+++ b/libs/serd/HISTORY
@@ -1,3 +1,6 @@
+2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to 0.18.2
+
 2011-12-20 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS, BUILD, INSTALL, DEPENDS: spell created
 
