--- a/libs/sord/HISTORY
+++ b/libs/sord/HISTORY
@@ -1,3 +1,6 @@
+2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated spell to 0.12.0
+
 2011-12-20 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS, BUILD, INSTALL: spell created
 
