--- a/audio-libs/lv2core/HISTORY
+++ b/audio-libs/lv2core/HISTORY
@@ -1,3 +1,8 @@
+2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
+	* spell deprecated [upstream repackaging]
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: converted to upstream signature checking
 	* 29727060.gpg: added gpg keyring
