--- a/chat-im/pidgin/HISTORY
+++ b/chat-im/pidgin/HISTORY
@@ -1,3 +1,6 @@
+2013-10-23 Mark Bainter <mbainter@sourcemage.org>
+	* DEPENDS: Pidgin depends on glib2 2.16 or newer
+
 2013-10-10 Jeremy Blosser <jblosser@sourcemage.org>
 	* DEPENDS: --enable-dbus wants dbus-glib, not just dbus
 
