--- a/audio-libs/liblrdf/HISTORY
+++ b/audio-libs/liblrdf/HISTORY
@@ -1,3 +1,6 @@
+2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: update checksum
+
 2013-02-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.5.0, fixed WEB_SITE, SOURCE_URL
 	* BUILD: removed
