--- a/libs/xmlrpc-c/HISTORY
+++ b/libs/xmlrpc-c/HISTORY
@@ -1,3 +1,6 @@
+2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS, PRE_BUILD: bump to 1.25.26
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
