--- a/audio-creation/ardour3/HISTORY
+++ b/audio-creation/ardour3/HISTORY
@@ -1,3 +1,5 @@
+2013-10-24 Thomas Orgis <sobukus@sourcemage.org>
+	* CONFIGURE: added, option for phone-home
+
 2013-10-23 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS, DETAILS, INSTALL, BUILD: spell created
-
