--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,7 @@
+2013-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: fixed spell bug for building regular mysql module for legacy
+	  branch
+
 2013-07-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.3.27 (previous), 5.4.17 (stable); updated
 	  backports+security patches for legacy branch to 20130717;
