--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,6 @@
+2013-10-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.0
+
 2013-10-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.4
 
