--- a/haskell/haskell-network/HISTORY
+++ b/haskell/haskell-network/HISTORY
@@ -1,3 +1,6 @@
+2013-10-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.4.2.0
+
 2013-07-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.4.1.2
 
