--- a/devel/git-cola/HISTORY
+++ b/devel/git-cola/HISTORY
@@ -1,3 +1,6 @@
+2013-10-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.9.1
+
 2013-05-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.8.3
 
