--- a/video/xbmc/HISTORY
+++ b/video/xbmc/HISTORY
@@ -1,3 +1,6 @@
+2013-10-26 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS, DEPENDS: version 12.2
+
 2012-07-15 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: changed optional_depends libdts to libdca
 
