--- a/python-pypi/sqlalchemy/HISTORY
+++ b/python-pypi/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2013-10-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.3
+
 2013-07-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.2
 
