--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2013-10-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: depend on stable branch of ffmpeg if using ffmpeg
+
 2013-09-26 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: fixed permissions - 755
 
