--- a/python-pypi/fb-python/HISTORY
+++ b/python-pypi/fb-python/HISTORY
@@ -1,3 +1,6 @@
+2013-10-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.4
+
 2013-09-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.3
 
