--- a/libs/sdl/HISTORY
+++ b/libs/sdl/HISTORY
@@ -1,3 +1,7 @@
+2013-10-23 Jeremy Blosser <jblosser@sourcemage.org>
+	* PRE_BUILD, libsdl-1.2-fix-compilation-libX11.patch: Upstream patch to
+	  fix building against recent libx11
+
 2013-09-06 Eric Sandall <sandalle@sourcemage.org>
 	* *SUB_DEPENDS: Replaced xorg-libs with libx11
 	* DEPENDS: Additionally depend on libice when depending on libx11
@@ -52,6 +56,7 @@
 
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
+
 
 2006-09-10 George Sherwood <george@beernabeer.com>
 	* PRE_BUILD: Added patch from:
