--- a/xorg-data/xkeyboard-config/HISTORY
+++ b/xorg-data/xkeyboard-config/HISTORY
@@ -1,3 +1,6 @@
+2013-10-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.10.1
+
 2013-05-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.9
 
