--- a/xorg-app/xauth/HISTORY
+++ b/xorg-app/xauth/HISTORY
@@ -1,3 +1,6 @@
+2013-10-28  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.8
+
 2012-03-23  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.7
 
