--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2013-10-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.38.1
+
 2013-04-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.38.0
 
