--- a/graphics-libs/libemf/HISTORY
+++ b/graphics-libs/libemf/HISTORY
@@ -1,3 +1,6 @@
+2013-10-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.0.7
+
 2011-08-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, DEPENDS, PRE_BUILD: spell created, version 1.0.4
 
