--- a/net/minidlna/HISTORY
+++ b/net/minidlna/HISTORY
@@ -1,3 +1,10 @@
+2013-10-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.1.0
+	* PRE_BUILD, BUILD: Removed
+	* minidlna.patch: Removed, no longer applies
+	* init.d/minidlna: Binary renamed to minidlnad
+	  PID is stored in /var/run/minidlna/minidlna.pid
+
 2012-06-19 Arjan Bouter <abouter@sourcemage.org>
 	* PRE_BUILD, minidlna.patch: added ffmpeg fix
 
