--- a/devel/qt-creator/HISTORY
+++ b/devel/qt-creator/HISTORY
@@ -1,3 +1,6 @@
+2013-10-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: devel version 3.0.0
+
 2013-08-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.8.1
 
