--- a/devel/cppcheck/HISTORY
+++ b/devel/cppcheck/HISTORY
@@ -1,3 +1,6 @@
+2013-11-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.62
+
 2013-05-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.59
 
