--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2013-11-02  Treeve Jelbert <treeve@sourcemage.org>
 	* xorg-proto/dri3proto: new spell, DRI3 proto headers
+	* xorg-proto/presentproto: new spell, Present proto headers
 
 2013-10-27 Ismael Luceno <ismael@sourcemage.org>
 	* devel/smake: new spell, highly portable make program with automake
