--- a/xorg-lib/xtrans/HISTORY
+++ b/xorg-lib/xtrans/HISTORY
@@ -1,3 +1,6 @@
+2013-11-02  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.0
+
 2012-03-23  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.7
 
